

Version 1.7.1

* Use bounded wildcards to increased API flexibility


Version 1.7.2

+ Add static factory methods #of, #copyOf to RubyArray and RubyHash

* Deprecate RubyCollections#newRubyArray(List, boolean) and  RubyCollections#newRubyHash(LinkedHashMap, boolean)

- Remove RubyString#chars to solve the API conflict with Java 8 CharSequence


Version 1.7.3

* Fix RubyString#unpack Directive H,h,B,b bugs

* Modify RubyKernel#p behavior toward primitive arrays

* Change RubyArray#copyOf(List) to RubyArray#copyOf(Iterable)


Version 1.7.4

* Change RubyString#unpack to use ASCII-8bit encoding by adding ASCII8BitUTF

* Move ByteUtil to net.sf.rubycollect4j.util package


Version 1.7.5

* Increase the flexibility of RubyArray API by accepting Collection in certain methods

* Change Comparable<RubyArray> to Comparable<List> in RubyArray

* Improve the quality of entire JavaDoc

* Deprecate RubyCollections#newRubyString


Version 1.8.0

+ Add Ruby.Enumerable, Ruby.Enumerator and Ruby.LazyEnumerator interfaces

+ Add RubySet

- Remove deprecated methods

- Remove RubyCollections::newRubyRange

+ Expend RubyDate API

+ Add RubyEnumerator::of, RubyEnumerator::copyOf, RubyLazyEnumerator::of & RubyLazyEnumerator::copyOf

* Increase the acceptable number of RubyCollections::rh arguments from 20 to 26 key-value pairs


Version 1.8.1

* Fix RubyArray#sample bug


Version 1.8.2

+ Add RubyIO::open(File) and RubyIO::open(InputStream) methods

* Add Boolean.False detection to RubyEnumerable#allʔ, RubyEnumerable#anyʔ, RubyEnumerable#noneʔ and RubyEnumerable#oneʔ


Version 1.9.0

+ Add RubyIterables & RubyStrings

* Deprecate all methods which require Java reflection

+ Add chunkWhile method to Enumerable

+ Add grepV method to Enumerable

+ Add sliceAfter method to Enumerable

+ Add sliceWhen method to Enumerable

+ Add toH method to Enumerable

- Remove @SafeVarargs

Version 2.0.0

* JDK 1.8

+ Add Ruby class

+ Update all methods to Ruby 2.4